chore: add registry to point to the github registry

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   },
   "scripts": {
     "bundle": "microbundle"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
