chore: add resolution to run the same version found in nvmrc

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
+  },
+  "resolutions": {
+    "node": ">=17.5.0"
   }
 }
