--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
     "microbundle": "^0.14.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "bundle": "microbundle"
+    "bundle": "microbundle",
+    "test": "jest"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
   "resolutions": {
     "node": ">=17.5.0"
+  },
+  "dependencies": {
+    "isomorphic-unfetch": "^3.1.0"
   }
 }
