--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "kitcall",
   "version": "0.1.2",
   "description": "The call function is a lib to help you call things :)",
-  "main": "build/kitcall.cjs.js",
-  "module": "build/kitcall.esm.js",
-  "browser": "build/kitcall.umd.js",
+  "main": "dist/kitcall.cjs.js",
+  "module": "dist/kitcall.esm.js",
+  "browser": "dist/kitcall.umd.js",
   "repository": "git@github.com:mrlemoos/call.git",
   "author": "Leonardo Lemos <leo.lemos.ds@icloud.com>",
   "license": "MIT",
@@ -27,7 +27,7 @@
     }
   ],
   "files": [
-    "build"
+    "dist"
   ],
   "scripts": {
     "bundle": "bili",
