--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "kitcall",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "The call function is a lib to help you call things :)",
-  "main": "dist/kitcall.cjs.js",
-  "module": "dist/kitcall.esm.js",
-  "browser": "dist/kitcall.umd.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "repository": "git@github.com:mrlemoos/call.git",
   "author": "Leonardo Lemos <leo.lemos.ds@icloud.com>",
   "license": "MIT",
