--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/node-fetch": "^2.6.1",
-    "bili": "^5.0.5",
     "jest": "^27.5.1",
+    "microbundle": "^0.15.0",
     "rimraf": "^3.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.2",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
