build: add microbundle as the script to bundle

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dist"
   ],
   "scripts": {
-    "bundle": "bili",
+    "bundle": "microbundle",
     "test": "jest"
   },
   "dependencies": {
